# relay-core

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
core/: Cargo.toml
core/examples/: basic.rs  standalone.rs  with_hooks.rs
core/src/: agent.rs  lib.rs
core/src/models/: config.rs  error.rs  mod.rs  result.rs  task.rs
core/src/traits/: hooks.rs  mod.rs  result_sink.rs  scan_engine.rs  task_queue.rs
core/tests/: integration_test.rs
