[workspace]
members = [
    "core",
    "platforms/relay-nats",
    "platforms/relay-http",
    "platforms/relay-grpc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["shadykube@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/yourorg/relay-core"
